@@ -17,6 +17,7 @@ import java.sql.SQLException;
 import java.util.List;
 import java.util.logging.Level;
 import java.util.logging.Logger;
+import java.util.stream.Collectors;
 import models.Slider;
 import utils.Helper;
 
@@ -50,11 +51,13 @@ public class SliderController extends HttpServlet {
                 if(sliders != null){
                     if(text != null && !text.trim().isEmpty()){
                         request.setAttribute("text", text);
-                        sliders = sliders.stream().filter(n -> n.getTitle().toLowerCase().equals(text.toLowerCase())).toList();
+                        sliders = sliders.stream().filter(n -> n.getTitle().toLowerCase().equals(text.toLowerCase()))
+                 .collect(Collectors.toList());
                     }
                     if(status != null && !status.trim().isEmpty() && !status.equalsIgnoreCase("All")){
                         request.setAttribute("status", status);
-                        sliders = sliders.stream().filter(n -> status.equals(n.getStatus())).toList();
+                        sliders = sliders.stream().filter(n -> n.getTitle().toLowerCase().equals(text.toLowerCase()))
+                 .collect(Collectors.toList());
                     }
                 }
                 List list = Helper.pagination(sliders, page, 5);
@@ -69,27 +72,14 @@ public class SliderController extends HttpServlet {
         }
     } 
 
-    // <editor-fold defaultstate="collapsed" desc="HttpServlet methods. Click on the + sign on the left to edit the code.">
-    /** 
-     * Handles the HTTP <code>GET</code> method.
-     * @param request servlet request
-     * @param response servlet response
-     * @throws ServletException if a servlet-specific error occurs
-     * @throws IOException if an I/O error occurs
-     */
+    
     @Override
     protected void doGet(HttpServletRequest request, HttpServletResponse response)
     throws ServletException, IOException {
         processRequest(request, response);
     } 
 
-    /** 
-     * Handles the HTTP <code>POST</code> method.
-     * @param request servlet request
-     * @param response servlet response
-     * @throws ServletException if a servlet-specific error occurs
-     * @throws IOException if an I/O error occurs
-     */
+    
     @Override
     protected void doPost(HttpServletRequest request, HttpServletResponse response)
     throws ServletException, IOException {
